--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1554,7 +1554,7 @@ pre code {
   font-size: inherit;
   color: inherit;
   white-space: pre-wrap;
-  background-color: transparent;
+  background-color: #eee;
   border-radius: 0;
 }
 .pre-scrollable {
